--- a/styles/app.css
+++ b/styles/app.css
@@ -125,12 +125,13 @@ button {
 
 .header-container--long {
   background-image: url('https://pics.filmaffinity.com/Deadpool-777527803-large.jpg');
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.35) 19.27%, rgba(0, 0, 0, 0) 29.17%), url(https://pics.filmaffinity.com/Deadpool-777527803-large.jpg);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.35) 19.27%, rgba(0, 0, 0, 0) 29.17%), url('https://pics.filmaffinity.com/Deadpool-777527803-large.jpg');
   background-size: cover !important;
   height: 480px;
   position: fixed;
   top: 0;
   width: 100%;
+  
 }
 
 .header-container--categoryView {
